Updated Docstring documentation and ZMP Control

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -111,7 +111,7 @@ qi_stage_lib(JACOBIAN)
 
 # Create a list of source files
 set(_srcs
-	src/xsens_imitation.cpp
+	src/xsens_imitation_2.cpp
 	src/dynamics_param.cpp
 	src/xsens_tool.cpp
 	src/robot.cpp
